--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.89.2",
+    "selenium": "^2.20.0",
     "web-vitals": "^5.0.3"
   },
   "scripts": {
